# ALSA-Modular-Parallel-Synth

./: .cproject  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  config.status  configure  configure.ac  seq-data.txt
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
colors/: Makefile  Makefile.am
demos/: Makefile.am  bass.ams  bass_reverb.ams  example.ams_demo_scope_spectrum.ams  example_basic_vcf_gverb_mcpfilter_env.ams  example_basic_vcf_reverb.ams  example_basic_vcf_reverb_filter_env.ams  example_cvs.ams  example_env_vcf.ams  example_midiout_birds.ams  example_midiout_junglebirds.ams  example_midiout_note_velocity.ams  example_strings.ams  example_vco_add.ams  example_vcorgan_6.ams  example_vcswitch.ams
instruments/: Makefile.in  bass_presets.ams  hplp_instrument.ams  hplp_instrument_pocketdial.ams  min.amps.ams  min.amps_pan_lfo.ams  min.amps_vcenv2.ams  phaser_instrument_pan.ams  phaser_instrument_pan_lfo.ams
pixmaps/: Makefile  Makefile.in
source_code/: Amps-Configure.txt  Makefile  Makefile.in  TODO.txt  config.status  data.txt
source_code/autom4te.cache/: output.2  requests
source_code/colors/: Makefile  Makefile.in
source_code/demos/: JungleBird.ams  Makefile  Makefile.in  SineSolo.ams  bass_advenv.ams  example.ams_demo.ams  example.ams_demo_scope_spectrum_drums.ams  example_basic.ams  example_basic_vcf.ams  example_basic_vcf_gverb_mcpfilter_env_filtmod.ams  example_basic_vcf_reverb_mcpfilter_env.ams  example_bode_wail.ams  example_burst_noise.ams  example_capture.ams  example_fm.ams  example_midiout_controller.ams  example_midiout_note.ams  example_midiout_random.ams  example_phaser.ams  example_phaser_bassclang.ams  example_portamento.ams  example_simple_cembalo.ams  example_strings_high_reso.ams
source_code/instruments/: Makefile  Makefile.am  bass_presets_vcenv.ams  min.amps_pan.ams  min.amps_pan_drift.ams  phaser_instrument.ams
source_code/man/: Makefile  Makefile.am  Makefile.in  amps.1
source_code/pixmaps/: Makefile  Makefile.am  amps_32.xpm
source_code/src/: Makefile  Makefile.am  Makefile.in  amps.pro  box_moc.cpp  canvas.cpp  canvas_moc.cpp  canvasfunction.cpp  canvasfunction.h  colorwidget.h  colorwidget_moc.cpp  config.h  config.h.in  configdialog.cpp  configdialog_moc.cpp  function.cpp  function_moc.cpp  getclocktimer.cpp  getclocktimer.h  guiwidget.cpp  guiwidget_moc.cpp  m_ad.cpp  m_advenv.cpp  m_advenv.h  m_amp.cpp  m_amp.h  m_conv.cpp  m_conv.h  m_cvs.cpp  m_ede_moc.cpp  m_env.h  m_fsin.cpp  m_fsin.h  m_fsin_moc.cpp  m_function.cpp  m_function.h  m_inv.h  m_lfo.cpp  m_lfo.h  m_lfo_moc.cpp  (+69 more)
source_code/src/.deps/: box_moc.Po  canvasfunction.Po  colorwidget.Po  colorwidget_moc.Po  configdialog.Po  configdialog_moc.Po  envelope.Po  function_moc.Po  ladspadialog.Po  m_ad.Po  m_conv_moc.Po  m_cvs_moc.Po  m_dynamicwaves_moc.Po  m_ede.Po  m_ede_moc.Po  m_env.Po  m_env_moc.Po  m_fsin.Po  m_fsin_moc.Po  m_function_moc.Po  m_lfo.Po  m_mcv.Po  m_mcv_moc.Po  m_mix.Po  m_mphlfo.Po  m_pcmin_moc.Po  m_pcmout.Po  m_pcmout_moc.Po  m_quantizer.Po  m_ringmod.Po  m_ringmod_moc.Po  m_scope.Po  m_scope_moc.Po  m_seq.Po  m_sh_moc.Po  m_slew.Po  m_slew_moc.Po  m_stereomix_moc.Po  m_vca.Po  m_vca_moc.Po  (+34 more)
source_code/src/translations/: amps_de.ts  amps_fr.ts
source_code/tutorial/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  canvas.h  colorwidget.cpp  config.h.in~  configdialog.h  envelope.cpp  function.h  join_threads.hpp  ladspadialog.cpp  m_advmcv.cpp  m_advmcv.h  m_advmcv_moc.cpp  m_cvs.h  m_delay.cpp  m_delay.h  m_dynamicwaves.cpp  m_dynamicwaves.h  m_env.cpp  m_env_moc.cpp  m_inv.cpp  m_inv_moc.cpp  m_ladspa.cpp  m_midiout.cpp  m_mix_moc.cpp  m_mphlfo.cpp  m_pcmin.h  m_pcmin_moc.cpp  m_pcmout.cpp  m_pcmout.h  m_pcmout_moc.cpp  m_quantizer.h  m_ringmod.h  m_ringmod_moc.cpp  m_scope.cpp  m_scquantizer.h  m_seq.cpp  m_seq_moc.cpp  m_sh.cpp  (+39 more)
src/.deps/: box.Po  canvas.Po  canvas_moc.Po  function.Po  getclocktimer.Po  guiwidget.Po  guiwidget_moc.Po  intmidislider.Po  ladspadialog_moc.Po  m_ad_moc.Po  m_advenv.Po  m_advenv_moc.Po  m_advmcv.Po  m_advmcv_moc.Po  m_amp.Po  m_amp_moc.Po  m_conv.Po  m_cvs.Po  m_delay.Po  m_delay_moc.Po  m_dynamicwaves.Po  m_function.Po  m_inv.Po  m_inv_moc.Po  m_ladspa.Po  m_ladspa_moc.Po  m_lfo_moc.Po  m_midiout.Po  m_midiout_moc.Po  m_mix_moc.Po  m_mphlfo_moc.Po  m_noise.Po  m_noise2.Po  m_noise2_moc.Po  m_noise_moc.Po  m_pcmin.Po  m_quantizer_moc.Po  m_scmcv.Po  m_scmcv_moc.Po  m_scquantizer.Po  (+34 more)
src/translations/: amps_de.qm  amps_fr.qm
