# Makefile.am for v-amps

demosdatadir = $(pkgdatadir)/demos
dist_demosdata_DATA = \
	bass_advenv.amps \
	bass.amps \
	bass_reverb.amps \
	chorus_drops2.amps \
	chorus_drops.amps \
	classical.amps \
	classical_reverb.amps \
	example_2vco.amps \
	example_3vco.amps \
	example_3vco_bode.amps \
	example_advmcv.amps \
	example_ams_demo.amps \
	example_ams_demo_bode.amps \
	example_ams_demo_scala.amps \
	example_ams_demo_scope_spectrum.amps \
	example_ams_demo_scope_spectrum_drums.amps \
	example_ams_demo_scope_spectrum_mcp_phaser.amps \
	example_ams_demo_scope_spectrum_mcpvcf.amps \
	example_barberpole.amps \
	example_barberpole_phaser.amps \
	example_barberpole_phaser_reverb.amps \
	example_barberpole_phaser_up_down.amps \
	example_barberpole_up_down.amps \
	example_basic.amps \
	example_basic_vcf.amps \
	example_basic_vcf_gverb_mcpfilter_env.amps \
	example_basic_vcf_gverb_mcpfilter_env_filtmod.amps \
	example_basic_vcf_reverb.amps \
	example_basic_vcf_reverb_filter_env.amps \
	example_basic_vcf_reverb_mcpfilter_env.amps \
	example_bode.amps \
	example_bode_wail.amps \
	example_burst_noise.amps \
	example_capture.amps \
	example_chorus.amps \
	example_chorus_modwheel.amps \
	example_cvs.amps \
	example_dual_env.amps \
	example_dynamicwaves_8.amps \
	example_dynamicwaves_8_chorus.amps \
	example_dynamicwaves_8_retrigger.amps \
	example_dynamicwaves_8_seq.amps \
	example_env_vcf.amps \
	example_fm.amps \
	example_full.amps \
	example_full_midi.amps \
	example_function.amps \
	example_midiout_birds.amps \
	example_midiout_controller.amps \
	example_midiout_junglebirds.amps \
	example_midiout_note.amps \
	example_midiout_note_velocity.amps \
	example_midiout_random.amps \
	example_mvclpf_phaser_2poles.amps \
	example_mvclpf_phaser.amps \
	example_phaser.amps \
	example_phaser_bassclang.amps \
	example_phaser_basspad.amps \
	example_portamento.amps \
	example_random_major.amps \
	example_random_major_chords.amps \
	example_random_minor_chords.amps \
	example_rectangle_pw.amps \
	example_ringmod.amps \
	example_simple_cembalo.amps \
	example_strings.amps \
	example_strings_high_reso.amps \
	example_vcdoubledecay.amps \
	example_vcEnvelope.amps \
	example_vcEnvelope_exp.amps \
	example_vcEnvelope_lin.amps \
	example_vco_add.amps \
	example_vcorgan_4.amps \
	example_vcorgan_6.amps \
	example_vcorgan_8.amps \
	example_vc_panning.amps \
	example_vc_panning_lfo.amps \
	example_vcswitch.amps \
	example_wind.amps \
	JungleBird.amps \
	living_phaser.amps \
	organ01.amps \
	organ02.amps \
	organ03.amps \
	phaser_wail.amps \
	sequence01.amps \
	sequence01b.amps \
	sequence02.amps \
	sequence02b.amps \
	sequence02c.amps \
	sequence03.amps \
	sequence03b.amps \
	SineSolo.amps
