# Makefile.am for v-amps

instrumentsdatadir = $(pkgdatadir)/instruments
dist_instrumentsdata_DATA = \
	bass_presets.amps \
	bass_presets_vcenv.amps \
	example_presets_3vco.amps \
	example_presets.amps \
	hplp_instrument.amps \
	hplp_instrument_pocketdial.amps \
	miniams.amps \
	miniams_pan.amps \
	miniams_pan_drift.amps \
	miniams_pan_lfo.amps \
	miniams_vcenv2.amps \
	organ.amps \
	phaser_instrument.amps \
	phaser_instrument_pan.amps \
	phaser_instrument_pan_lfo.amps \
	README_hplp_instrument_pocketdial

