# Makefile.am for amps

tutorialdatadir = $(pkgdatadir)/tutorial
dist_tutorialdata_DATA = \
	A_tutorial01_Introduction.amps \
	A_tutorial01_MCV_and_VCO_1.amps \
	A_tutorial01_MCV_and_VCO_2.amps \
	A_tutorial01_MCV_and_VCO_3.amps \
	A_tutorial02_VCA.amps \
	A_tutorial03_ENV_and_VCA.amps \
	A_tutorial04_VCF_and_Scope.amps \
	A_tutorial05_ENV_and_VCF_1.amps \
	A_tutorial05_ENV_and_VCF_2.amps \
	A_tutorial05_ENV_and_VCF_3.amps \
	A_tutorial05_ENV_and_VCF_4.amps \
	A_tutorial05_ENV_and_VCF_5.amps \
	A_tutorial05_ENV_and_VCF_6.amps \
	A_tutorial06_LFO_Pitch.amps \
	A_tutorial07_LFO_PW.amps \
	A_tutorial08_ParameterView.amps \
	A_tutorial09_Effects_Chorus.amps \
	A_tutorial10_Effects_Reverb.amps \
	A_tutorial11_Effects_Canyon.amps \
	A_tutorial12_Effects_PhaserLFO.amps \
	A_tutorial13_Effects_PhaserENV.amps \
	A_tutorial14_Effects.amps
